--- a/source/config/log_config.json
+++ b/source/config/log_config.json
@@ -5,20 +5,20 @@
         "formatters": {
             "std_out_formatter": {
                 "class": "logging.Formatter",
-                "format": "%(levelname)-8s%(message)s"
+                "format": "%(levelname)-8s %(message)s"
             },
             "std_err_formatter": {
                 "class": "logging.Formatter",
-                "format": "%(levelname)-8s at %(processName)s %(threadName)s in %(name)s.%(module)s.%(funcName)s line %(lineno)d %(message)s"
+                "format": "%(levelname)-8s at %(processName)s %(threadName)-10s in %(name)s.%(module)s.%(funcName)s line %(lineno)d %(message)s"
             },
             "debug_verbose_formatter": {
                 "class": "logging.Formatter",
-                "format": "%(levelname)-8s at %(processName)s %(threadName)s in %(name)s.%(module)s.%(funcName)s line %(lineno)d -> %(message)s",
+                "format": "%(levelname)-8s at %(processName)s %(threadName)-10s in %(name)s.%(module)s.%(funcName)s line %(lineno)d -> %(message)s",
                 "style": "%"
             },
             "debug_one_line_formatter": {
                 "class": "logging.Formatter",
-                "format": "%(asctime)s %(levelname)-8s at %(processName)s %(threadName)s in %(name)s.%(module)s.%(funcName)s line %(lineno)d",
+                "format": "%(asctime)s %(levelname)-8s at %(processName)s %(threadName)-10s in %(name)s.%(module)s.%(funcName)s line %(lineno)d",
                 "style": "%"
             }
         },
