--- a/source/config/log_config.json
+++ b/source/config/log_config.json
@@ -9,17 +9,17 @@
             },
             "std_err_formatter": {
                 "class": "logging.Formatter",
-                "format": "%(levelname)-8s at %(processName)s %(threadName)-10s in %(name)s.%(module)s.%(funcName)s line %(lineno)d %(message)s"
+                "format": "%(levelname)-8s %(message)s"
             },
             "debug_verbose_formatter": {
                 "class": "logging.Formatter",
-                "format": "%(levelname)-8s at %(processName)s %(threadName)-10s in %(name)s.%(module)s.%(funcName)s line %(lineno)d -> %(message)s",
-                "style": "%"
+                "format": "{asctime} {levelname:<8}  in {name}.{module}.{funcName} as {processName} {threadName:<10} line {lineno} -> {message}",
+                "style": "{"
             },
             "debug_one_line_formatter": {
                 "class": "logging.Formatter",
-                "format": "%(asctime)s %(levelname)-8s at %(processName)s %(threadName)-10s in %(name)s.%(module)s.%(funcName)s line %(lineno)d",
-                "style": "%"
+                "format": "{asctime} {levelname:<8}  in {name}.{module}.{funcName} as {processName} {threadName:<10} line {lineno} -> {message}",
+                "style": "{"
             }
         },
         "handlers": {
