use wrapper with conditions? Fixes #13 add condition in wrapper

--- a/source/config/log_config.json
+++ b/source/config/log_config.json
@@ -75,7 +75,7 @@
                     "debug_verbose_handler",
                     "debug_one_line_handler"
                 ],
-                "level": "DEBUG",
+                "level": "INFO",
                 "propagate": true
             }
         }
